--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,63 @@
-.App {
-  text-align: center;
+@import url('https://fonts.googleapis.com/css2?family=Almarai:wght@300;400;700;800&display=swap');
+*{
+  -webkit-box-sizing: border-box;
+  -moz-box-sizing: border-box;
+  box-sizing: border-box;
+  padding: 0;
+  margin: 0;
 }
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+:root{
+  --text-color: #353c4e;
+  --card-bg: #fff;
+  --bg-color: #f6f7fb;
+  --main-color: #01a9ac;
+  --sidebar-bg: #404e67;
+  --danger-gradient: linear-gradient(to right, #eb3422, #ef5f51);
+  --success-gradient: linear-gradient(to right, #0ac282, #0df3a3);
+  --primary-gradient: linear-gradient(to right, #01a9ac, #01dbdf);
+  --header-shadow: 0 0 11px rgba(0,0,0,0.13);
+  --card-shadow: 0 1px 20px 0 rgba(69, 90, 100, 0.08);
+  --main-border-radius: 4px;
+  --side-text-color: #c3c3c3;
+  --main-transition: all 0.2s 0s linear;
 }
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+body{
+  font-family: "Almarai", sans-serif;
 }
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+a{
+  text-decoration: none;
 }
-
-.App-link {
-  color: #61dafb;
+ul{
+  list-style: none;
 }
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+img, video{
+  max-width: 100%;
+}
+input, select{
+  outline: none;
+  border: 1px solid #000;
+  padding: 8px 12px;
+  border-radius: var(--main-border-radius);
+  transition: var(--main-transition);
+  font-family: "Almarai", sans-serif;
+  border: 1px solid #ccc;
+}
+input:focus, 
+input:focus-visible,
+select:focus, 
+select:focus-visible{
+  border: 1px solid var(--main-color);
+}
+main{
+  background-color: var(--bg-color);
+  margin-left: 200px;
+  height: calc(100vh - 55px);
+  overflow-y: scroll;
+  padding: 20px 30px;
+  z-index: 2;
+}
+@media (max-width: 992px) {
+    main{
+        margin-left: 0px;
+    }
 }
