--- a/src/Pages/Header/header.module.css
+++ b/src/Pages/Header/header.module.css
@@ -6,4 +6,10 @@
     position: sticky;
     top: 0;
     left: 0;
+    margin-left: 200px;
+}
+@media (max-width: 992px) {
+    .header{
+        margin-left: 0px;
+    }
 }
