--- a/src/Pages/AddCustom/add-custom.css
+++ b/src/Pages/AddCustom/add-custom.css
@@ -146,7 +146,11 @@
 
 /* ########################################################################################################## */
 /* copied from the old project */
+.add-custom .form-group:has(.selector-element){
+    width: calc((100% - 40px) / 3);
+}
 .selector-element {
+    width: fit-content;
     flex-wrap: wrap;
     /* justify-content: center; */
 }
