--- a/src/App.css
+++ b/src/App.css
@@ -33,19 +33,23 @@ ul{
 img, video{
   max-width: 100%;
 }
-input, select{
+input, select, textarea{
   outline: none;
   border: 1px solid #000;
   padding: 8px 12px;
   border-radius: var(--main-border-radius);
   transition: var(--main-transition);
-  font-family: "Almarai", sans-serif;
   border: 1px solid #ccc;
+}
+input, select, textarea{
+  font-family: "Almarai", sans-serif;
 }
 input:focus, 
 input:focus-visible,
 select:focus, 
-select:focus-visible{
+select:focus-visible,
+textarea:focus, 
+textarea:focus-visible{
   border: 1px solid var(--main-color);
 }
 main{
