--- a/src/components/MainBtn/main-btn.module.css
+++ b/src/components/MainBtn/main-btn.module.css
@@ -1,12 +1,13 @@
 .mainBtn{
     background-color: var(--main-color);
-    padding: 7px 20px;
+    padding: 7px 10px;
     color: #fff;
     font-family: "Almarai", sans-serif;
     border: none;
     border-radius: var(--main-border-radius);
     cursor: pointer;
     box-shadow: var(--card-shadow);
+    width: 120px;
 }
 .mainBtn:hover,
 .mainBtn:focus,
