--- a/src/Pages/Translation/translation.module.css
+++ b/src/Pages/Translation/translation.module.css
@@ -1,5 +1,12 @@
 .translation{
     direction: rtl;
+    padding-bottom: 100px;
+}
+.translation > div:not(:first-child){
+    margin-top: 20px;
+}
+.translation h3{
+    text-align: center;
 }
 .translation table{
     margin-top: 10px;
@@ -7,6 +14,9 @@
     border-radius: var(--main-border-radius);
     overflow: hidden;
     direction: rtl;
+    margin-left: auto;
+    margin-right: auto;
+    max-width: 100%;
 }
 .translation table thead{
     background-color: #ccc;
@@ -17,6 +27,44 @@
     border-bottom: 1px solid #ccc;
     text-align: center;
 }
+.translation table td{
+    cursor: pointer;
+}
 .translation table tr:hover{
     background-color: #eee;
+}
+.translation .translationProcess .processHeading{
+    width: fit-content;
+    margin-left: auto;
+    margin-right: auto;
+    border: 1px solid #ccc;
+    border-radius: var(--main-border-radius);
+    overflow: hidden;
+    display: flex;
+    flex-direction: column;
+    margin-bottom: 20px;
+}
+.translation .translationProcess .processHeading h4{
+    background-color: #ccc;
+    padding: 5px 20px;
+}
+.translation .translationProcess .processHeading span{
+    text-align: center;
+    /* background-color: red; */
+    padding: 5px 20px;
+    width: 100%;
+}
+.translation .translationProcess .processContent{
+    height: 70vh;
+    overflow-y: scroll;
+    padding: 20px;
+    box-shadow: 0px 0px 20px 5px #eee inset;
+    border-radius: var(--main-border-radius);
+}
+.translation .translationProcess .processContent::-webkit-scrollbar{
+    width: 10px;
+    background-color: #eee;
+}
+.translation .translationProcess .processContent::-webkit-scrollbar-thumb{
+    background-color: var(--main-color);
 }
