--- a/src/Pages/InvoiceList/invoice-list.module.css
+++ b/src/Pages/InvoiceList/invoice-list.module.css
@@ -396,7 +396,7 @@
 .invoiceList .summary .part.quickActions .partContent{
     display: grid;
     grid-template-columns: repeat(2, 1fr);
-    gap: 10px;
+    row-gap: 10px;
 }
 .invoiceList .summary .part .partPair{
     display: flex;
