--- a/src/components/MainBtn/main-btn.module.css
+++ b/src/components/MainBtn/main-btn.module.css
@@ -8,6 +8,7 @@
     cursor: pointer;
     box-shadow: var(--card-shadow);
     width: 120px;
+    max-width: 100%;
 }
 .mainBtn:hover,
 .mainBtn:focus,
